My icon big on small devices fixed. Add linkedin link

--- a/css/partials/global.css
+++ b/css/partials/global.css
@@ -36,6 +36,14 @@
     }    
 }
 
+@media screen and  (max-width: 576px) {
+    .special-title-text-adjust-size
+    {
+        font-size: 5rem;
+    }    
+}
+
+
 /* ================== */
 /* HEADER SUB TEXT   */
 /* ================== */
